--- a/index.html
+++ b/index.html
@@ -12,8 +12,60 @@
 </head>
 
 <body>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="figure">
 
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="info">
+                        <div class="row">
+                            <div class="col">
+                                <div class="rate mb-5 fw-bold">
+                                    <h1 id="tariffa">TIPO TARIFFA</h1>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="sconto mb-5">
+                                    <h3 id="eta">ETA</h3>
+                                    <br>
+                                    <h3>
+                                        <small class="text-muted">Sconto minorenni e over65</small>
+                                    </h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="type mb-5">
+                                    <h3>METROPOLITANE DISPONIBILI:</h3>
+                                    <br>
+                                    <span class="badge rounded-pill bg-primary">MT6</span>
+                                    <span class="badge rounded-pill bg-primary">MT7</span>
+                                    <span class="badge rounded-pill bg-primary">MT8</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="shop">
+                                    <h2>TOTALE: </h2>
+                                    <h3 id="tot"></h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="js/script.js"></script>
+
 </body>
 
 </html>
