fixed HTML chilometres

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <div class="row">
                             <div class="col">
                                 <div class="rate mb-5 fw-bold">
-                                    <h1 id="tariffa">TIPO TARIFFA</h1>
+                                    <h1 id="tariffa"></h1>
                                 </div>
                             </div>
                         </div>
@@ -35,7 +35,7 @@
                                     <h3 id="eta">ETA</h3>
                                     <br>
                                     <h3>
-                                        <small class="text-muted">Sconto minorenni e over65</small>
+                                        <small class="text-muted">Sconto et&aacute; 20% o 40%</small>
                                     </h3>
                                 </div>
                             </div>
@@ -43,11 +43,9 @@
                         <div class="row">
                             <div class="col">
                                 <div class="type mb-5">
-                                    <h3>METROPOLITANE DISPONIBILI:</h3>
+                                    <h3>PERCORSO:</h3>
                                     <br>
-                                    <span class="badge rounded-pill bg-primary">MT6</span>
-                                    <span class="badge rounded-pill bg-primary">MT7</span>
-                                    <span class="badge rounded-pill bg-primary">MT8</span>
+                                    <h3 id="kms"></h3>
                                 </div>
                             </div>
                         </div>
